# GarageThigs-2.0

./: README.md  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
garagem/: admin.py
garagem/migrations/: 0001_initial.py
garagem/models/: acessorio.py  cor.py  marca.py  modelo.py  veiculo.py
garagem/serializers/: acessorio.py  categoria.py  cor.py  marca.py  modelo.py  veiculo.py
garagem/views/: acessorio.py  categoria.py  cor.py  marca.py  modelo.py  veiculo.py
uploader/migrations/: 0001_initial.py
uploader/models/: document.py
uploader/serializers/: image.py
usuario/: admin.py  models.py
usuario/migrations/: 0001_initial.py
